@@ -1,3 +1,11 @@
+2011-09-27  Roland Grunberg  <rgrunber@redhat.com>
+
+	* src/org/eclipse/linuxtools/oprofile/core/linux/OpxmlRunner.java
+		(handleModelData): Add -g flag for debug information.
+	* src/org/eclipse/linuxtools/oprofile/core/opxml/modeldata/ModelDataAdapter.java:
+		Stop using addr2line to determine file/line information and use the
+		data collected from opreport instead.
+
 2011-09-26  Roland Grunberg  <rgrunber@redhat.com>
 
 	* src/org/eclipse/linuxtools/oprofile/core/opxml/modeldata/ModelDataAdapter.java:
